naming issues of classes causing disalignment in landing page about section and section page solved

--- a/src/ExtraPages/About/About.scss
+++ b/src/ExtraPages/About/About.scss
@@ -1,6 +1,6 @@
 @use "../../mixins" as *;
 
-#AboutMC{
+#About2MC{
   width : 100%;
   height : 100vh;
   
@@ -145,7 +145,7 @@
 }
 
 @include mediaDevice(mobile){
-  #AboutMC{
+  #About2MC{
 	width : 100%;
 	padding : 0;
 	
@@ -158,6 +158,7 @@
 	  .textLeft{
 		padding : 0;
 		width : 100%;
+		height : 100%;
 		font-size : clamp(0px, 3vh, 30px);
 	  	background : rgba(255, 255, 255, 0.5);
 		border-radius : 10px;
